# api-django-biblioteca

./: .gitignore  main.py  makefile  pyproject.toml  requirements.txt
django_project/: settings.py  urls.py
docker/: docker-compose.yml  dockerfile
docker/scripts/: entrypoint.sh  utils.sh
