[project]
name = "api-django-biblioteca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.6",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.12.0",
    "django-filter>=25.1",
    "django-redis>=6.0.0",
    "django-view-breadcrumbs>=2.5.1",
    "djangorestframework>=3.16.1",
    "gunicorn>=23.0.0",
    "markdown>=3.9",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
]
